Minor refactoring. Integ tests pass.